fix for the white space issue on the articles page

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -44,6 +44,10 @@
         }
     }
 
+    > * {
+        margin-top: 0 !important;
+    }
+
     h2 {
         text-align: left;
         margin-top: 0;
